[metadata]
name = lowatt-grdf
description = Client for the GRDF ADICT API
long_description = file:README.md
long_description_content_type = text/markdown
author = Lowatt
author_email = info@lowatt.fr
url = https://github.com/lowatt/lowatt-grdf
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    attrs
    cattrs
    click
    ndjson
    requests
    rich
zip_safe = False

[options.packages.find]
exclude =
    tests

[options.extras_require]
test =
    pytest
    pytest-cov
    responses
typing =
    mypy
    types-requests

[options.package_data]
lowatt_grdf = py.typed

[options.entry_points]
console_scripts =
    lowatt-grdf = lowatt_grdf.main:main
